[package]
name = "liblisa-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
liblisa = { version = "0.1.0", default-features = false, features = [] }
liblisa-wasm-shared = { path = "../liblisa-wasm-shared" }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
log = "0.4"
console_log = "1.0.0"
hex = "0.4"
console_error_panic_hook = "0.1.7"
bincode = "1.3.3"
lzma-rs = "0.3.0"
itertools = "0.12.0"
tokio = { version = "1.36", features = [ "sync" ] }

[dependencies.web-sys]
version = "0.3.66"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
