[package]
name = "liblisa-web-export"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
liblisa = { version = "0.1.0", default-features = false, features = [] }
liblisa-wasm-shared = { path = "../liblisa-wasm-shared" }
bincode = "1.3.3"
bitcode = "0.5.0"
rust-lzma = "0.6.0"
env_logger = "0.10.1"
itertools = "0.12.0"
rayon = "1.5"